SO-2058 Extract revision related part from resource converter
Update resource converter references